--- a/static/css/main.css
+++ b/static/css/main.css
@@ -81,6 +81,86 @@ main {
   font-size: 3.0rem;
 }
 
+/**/
+.consecutive-holidays-block {
+  width: 600px;
+  height: auto;
+  margin: auto;
+}
+
+.consecutive-holidays-content {
+  margin: 0 0 25px 0;
+}
+
+.firstday-consecutive-holiday {
+  background-color: white;
+  color: #000;
+  border-radius: 5px 5px 5px 5px / 5px 5px 5px 5px;
+  box-shadow: 0px 1px 20px 1px #eee;
+  cursor: pointer;
+  display: flex;
+  flex-flow: row nowrap;
+  padding: 10px 20px 10px 20px;
+  transition-property: box-shadow;
+  transition-duration: 0.5s;
+}
+
+.firstday-consecutive-holiday:before {
+  font-family: "Font Awesome 5 Free";
+  content: "\f054";
+  font-weight: bold;
+  font-size: 14px;
+  padding: 6px 12px 6px 12px;
+  transition-property: content;
+  transition-duration: 0.5s;
+}
+
+.firstday-consecutive-holiday:hover {
+  box-shadow: 0px 1px 20px 10px #eee;
+}
+
+.holiday-caretdown, .holiday-datestring, .holiday-name, .holiday-dayofweek, .holiday-numchain {
+  margin: 6px 3px 6px 3px;
+}
+
+.holiday-numchain {
+  color: red;
+  justify-self: flex-end;
+  margin-left: auto;
+  margin-right: 20px;
+}
+
+.first-checkbox-label {
+  display: none;
+}
+
+.child-consecutive-holidays {
+  height: 0;
+  overflow: hidden;
+  opacity:0;
+}
+
+.first-checkbox-label:checked + .child-consecutive-holidays {
+  height: auto;
+  opacity: 1;
+}
+
+.first-checkbox-label:checked + .firstday-consecutive-holiday {
+  background-color: gray;
+}
+
+.first-checkbox-label:checked + .firstday-consecutive-holiday:before {
+  content: "\f078";
+}
+
+.child-holiday {
+  color: gray;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  padding: 10px 0px 0px 53px;
+}
+
 footer { }
 
 .footer-nav {
