--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>次の連休はいつ？</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="shortcut icon" href="../static/img/favicon.ico">
     <link rel="stylesheet" href="../static/css/normalize.css">
     <link rel="stylesheet" href="../static/css/main.css">
@@ -10,7 +11,7 @@
   <body>
     <header>
       <nav class="header-nav">
-        <a class="header-title" href="index.html">Next Consecutive Holiday?</a>
+        <a class="header-title" href="index.html">次の連休は？</a>
       </nav>
     </header>
     <main>
@@ -19,8 +20,44 @@
         <p id="today-date-content" class="today-date-content"></p>
       </div>
 
-      <div>
-        <p id="holiday-list" class="holiday-list"></p>
+      <div class="">
+        <p>連続する休日数</p>
+        <!--
+        <div class="">
+          {% for i in range(5) %}
+            <label class="" for={{ i }}>
+              <p class="">{{ i + 1 }}日以上</p>
+            </label>
+            <input class="" type="checkbox" id={{ i }} />
+          {% endfor %}
+        </div>
+        -->
+      </div>
+
+      <div class="consecutive-holidays-block">
+        <p>dskodsk</p>
+        {% for chainHoliday in chainHolidayList %}
+          <div class="consecutive-holidays-content">
+            <input class="first-checkbox-label" type="checkbox" id={{ loop.index }} />
+            <label class="firstday-consecutive-holiday" for={{ loop.index }}>
+              <p class="holiday-datestring">{{ chainHoliday[0][1] }}</p>
+              <p class="holiday-dayofweek">（{{ chainHoliday[0][3] }}）</p>
+              <p class="holiday-name">{{ chainHoliday[0][2] }}</p>
+              <p class="holiday-numchain">連続休暇日数：{{ chainHoliday|length }}</p>
+            </label>
+            <div class="child-consecutive-holidays">
+              <!--hidden-area start-->
+              {% for childHoliday in chainHoliday[1:] %}
+                <div class="child-holiday">
+                  <p class="holiday-datestring">{{ childHoliday[1] }}</p>
+                  <p class="holiday-dayofweek">（{{ childHoliday[3] }}）</p>
+                  <p class="holiday-name">{{ childHoliday[2] }}</p>
+                </div>
+              {% endfor %}
+              <!--hidden-area end-->
+            </div>
+          </div>
+        {% endfor %}
       </div>
 
     </main>
