--- a/static/css/main.css
+++ b/static/css/main.css
@@ -228,6 +228,15 @@ main {
   color: #4caf50;
   justify-self: flex-end;
   margin-right: 1.5rem;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+}
+
+.holiday-numchain-counts {
+  font-size: 2.0rem;
+  font-weight: bold;
+  margin: auto 0.3rem auto 0.3rem;
 }
 
 .fa-twitter {
