--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <title>次の休みは何連休でいつ？ | １秒で分かる</title>
     <meta content="休みが待ち遠しいあなたに、次の休みが何日後で、何連休なのか1秒でお伝えします！！" name="description">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="google-site-verification" content="D9z65Te_roKIx3vjxE7dmBeC-M7ix53jVnvfZcDPqno" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="shortcut icon" href="../static/img/favicon.ico">
     <link rel="stylesheet" href="../static/css/normalize.css">
@@ -14,7 +15,7 @@
       <nav class="header-nav">
         <a class="header-title" href="/">
           <img class="header-title-icon" src="../static/img/icon.svg" alt="当サイトのアイコン" />
-          <p class="header-title-text">Next Consecutive Holidays | 次の連休は？</p>
+          <p class="header-title-text">次の休みは何連休でいつ？ | １秒で分かる</p>
         </a>
       </nav>
     </header>
