--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,22 @@
     <link rel="shortcut icon" href="../static/img/favicon.ico">
     <link rel="stylesheet" href="../static/css/normalize.css">
     <link rel="stylesheet" href="../static/css/main.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141892203-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-141892203-1');
+    </script>
   </head>
   <body>
     <header>
       <nav class="header-nav">
         <a class="header-title" href="/">
           <img class="header-title-icon" src="../static/img/icon.svg" alt="当サイトのアイコン" />
-          <p class="header-title-text">次の休みは何連休でいつ？ | １秒で分かる</p>
+          <p class="header-title-text">次の連休は？</p>
         </a>
       </nav>
     </header>
