add google adsense

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,15 @@
     </header>
 
     <main>
+      <!--Google Adsense-->
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-7261366565576818",
+          enable_page_level_ads: true
+        });
+      </script>
+
       <div class="today-date">
         <div class="today-date-string">
           <p>今日は</p>
@@ -98,6 +107,15 @@
           </div>
         {% endfor %}
       </div>
+
+      <!--Google Adsense-->
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-7261366565576818",
+          enable_page_level_ads: true
+        });
+      </script>
 
     </main>
     <footer>
